[package]
name = "my2d"
version = "0.1.0"
authors = ["Darius Wiles <github@dariuswiles.com>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
